# carbon-sink-calculation

./: .gitignore  CMakeLists.txt  CMakePresets.json  Feature.txt  HACKING.md  README.md  package.sh  user_role.cpp  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
installer/: package.sh
installer/config/: config.xml
source/: CMakeLists.txt  Untitled-1.java  carbon_calculator.cpp  carbon_calculator.h  carbon_sink_calculator.cpp  carbon_sink_calculator.h  carbon_sink_exporter.cpp  carbon_sink_exporter.h  carbon_sink_form.cpp  carbon_sink_form.h  constant.h  dialog_add_new_user.cpp  dialog_add_new_user.h  dialog_add_new_user.ui  http_param.h  lib.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model_usr_mgr.cpp  model_usr_mgr.h  network_interaction.cpp  network_interaction.h  page_add_new_user.cpp  page_add_new_user.h  page_add_new_user.ui  page_history.cpp  page_history.h  page_historystory.ui  page_input_param.cpp  page_input_param.h  page_input_param.ui  page_login.cpp  page_login.h  page_login.ui  page_single_record.cpp  page_single_record.h  page_single_record.ui  page_user_mgr.cpp  (+8 more)
style/: app.qrc  carbon-sink-calculation.rc  lightstyle.css  lightstyle.qrc
